# Q3_25_Builder_Kirtiraj

./: .gitignore  README.md
airdrop/: enroll.ts  package.json  transfer.ts
amm/: Anchor.toml  pnpm-lock.yaml  txtx.yml
amm/programs/amm/: Cargo.toml
amm/programs/amm/src/: error.rs  lib.rs
amm/runbooks/: README.md
amm/runbooks/deployment/: main.tx
amm/tests/: amm.ts
capstone/: README.md
capstone/magikmons/: Anchor.toml  README.md  pnpm-lock.yaml  txtx.yml
capstone/magikmons/programs/magikmons/: Cargo.toml
capstone/magikmons/runbooks/: README.md
capstone/magikmons/runbooks/deployment/: main.tx
capstone/magikmons/tests/: magikmons.ts
escrow/: .gitignore  Anchor.toml  README.md  escrow.excalidraw  package.json  tsconfig.json
escrow/programs/escrow/src/: lib.rs
escrow/tests/: escrow.ts
marketplace/: Anchor.toml
marketplace/programs/marketplace/: Cargo.toml
marketplace/programs/marketplace/src/: lib.rs
marketplace/tests/: marketplace.ts
nft-staking/: Anchor.toml
nft-staking/programs/nft-staking/src/: error.rs  lib.rs
nft-staking/tests/: nft-staking.ts
prerequisites/rust/: Cargo.toml
prerequisites/ts/programs/: Turbin3_prereq.ts
rust/: Cargo.toml
rust/src/: lib.rs
solana-starter/ts/cluster1/: nft_metadata.ts  nft_mint.ts  spl_metadata.ts  spl_mint.ts  spl_transfer.ts
ts/: .gitignore  airdrop.ts
vault/: .gitignore  Anchor.toml  README.md  package.json
vault-pinocchio/: .gitignore  Cargo.toml  README.md
vault-pinocchio/src/: lib.rs
vault-pinocchio/src/instructions/: deposit.rs  withdraw.rs
vault/tests/: vault.ts
(+48 files in other folders)
